# genai-tifda

./: .gitignore  README.md  pyproject.toml
assets/diagrams/: assesment_flow.md  dissemination_flow.md
config/: recipients.yaml  threat_thresholds.yaml
data/: shared_state.json
mqtt/: README.md
mqtt/config/: mosquitto.conf
scripts/: start_cop_map.sh
src/: __init__.py  tifda_app.py
src/agents/: __init__.py
src/core/: __init__.py  config.py  constants.py  init_config.py  state.py
src/integrations/: README.md  __init__.py  cop_sync.py  mapa_client.py  mqtt_client.py  mqtt_publisher.py
src/models/: README.md  __init__.py  cop_entities.py  dissemination.py  human_feedback.py  sensor_formats.py
src/nodes/: README.md  __init__.py  cop_merge_node.py  cop_normalizer_node.py  cop_update_node.py  dissemination_router_node.py  firewall_node.py  format_adapter_node.py  human_review_node.py  multimodal_parser_node.py  parser_node.py  threat_evaluator_node.py  transmission_node.py
src/parsers/: README.md  __init__.py  asterix_parser.py  base_parser.py  drone_parser.py  manual_parser.py  parser_factory.py  radio_parser.py
src/rules/: README.md  classification_rules.py  dissemination_rules.py  threat_rules.py
tests/: README.md  __init__.py  diagnostic_approved_threats.py  test_flux.py  test_human_review.py  test_integrations.py  test_mapa_sync.py  test_mapa_v2_compatibility.py  test_mqtt_flux.py  test_mqtt_integration.py  test_parsers.py  test_phase5_dissemination.py  test_pipeline_visualization.py  test_quick_ui.py  test_radar.py  test_ui_hilt_radar.py
(+14 files in other folders)
