[project]
name = "tifda"
version = "0.1.0"
description = "Tactical Information Fusion and Dissemination Agent"
authors = [
    { name = "Pablo Martínez Agulló", email = "pablo.martinez.agullo@gmail.com" }
]
license = { text = "GNU General Public License (GPL) 3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "gradio>=4.0.0",
    "folium>=0.15.0",
    "paho-mqtt>=2.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tifda"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


